--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,18 @@
-.wrapper{
-  border: 5px solid red;
-  padding: 10px;
-  height: 500px;
+.btn{
+  padding: 10px 15px;
+  outline: none;
+  border: none;
   background-color: dodgerblue;
-  background-image: url(../images/bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  color: white;
+  min-width: 100px; 
+  max-width: 130px;
+  width: 10%;
+  height: 50px;
+  margin-top: 50px;
+}
 
+.content-block{
+  width: 50%;
+  height: 300px;
+  overflow: scroll;
 }
