--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,11 @@
   min-width: 100px; 
   max-width: 130px;
   width: 10%;
-  height: 50px;
   margin-top: 50px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+  overflow: hidden;
 }
 
 .content-block{
