--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,21 +1,13 @@
-.btn{
-  padding: 10px 15px;
-  outline: none;
-  border: none;
-  background-color: dodgerblue;
-  color: white;
-  min-width: 100px; 
-  max-width: 130px;
-  width: 10%;
-  margin-top: 50px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-
-  overflow: hidden;
+body{
+  padding: 0;
+  margin: 0;
 }
 
-.content-block{
-  width: 50%;
-  height: 300px;
-  overflow: scroll;
+.container{
+  border: 5px solid red;
+  width: 40vh;
+  height: 40vh;
+  background-color: dodgerblue;
+  box-sizing: border-box;
+
 }
