--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,27 @@
-body{
-  padding: 0;
-  margin: 0;
+*{
+  box-sizing: border-box;
 }
 
 .container{
-  border: 5px solid red;
-  width: 40vh;
-  height: 40vh;
-  background-color: dodgerblue;
-  box-sizing: border-box;
+  display:inline-block;
+  width: 200px;
+  height: 200px;
+  padding: 10px;
+  background-color: blueviolet;
+  border: 3px solid red;
+  color: white;
 
+  font-size: 60px;
+
+}
+.hidden-ver1{
+  opacity: 0.5;
+}
+
+.hidden-ver2{
+  display: none;
+}
+
+.hidden-ver3{
+  visibility: hidden;
 }
