--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,26 +2,9 @@
   box-sizing: border-box;
 }
 
-.container{
-  display:inline-block;
-  width: 200px;
-  height: 200px;
-  padding: 10px;
-  background-color: blueviolet;
-  border: 3px solid red;
-  color: white;
-
-  font-size: 60px;
-
-}
-.hidden-ver1{
-  opacity: 0.5;
-}
-
-.hidden-ver2{
-  display: none;
-}
-
-.hidden-ver3{
-  visibility: hidden;
+.wrapper{
+  width: 50vmax;
+  height: 50vmin;
+  background-color: bisque;
+  border: 5px solid dodgerblue;
 }
