--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,21 @@
   box-sizing: border-box;
 }
 
+body,ul{
+  padding: 0;
+  margin: 0;
+}
+
 .wrapper{
-  width: 50vmax;
-  height: 50vmin;
+  width: 200px;
+  height: 200px;
   background-color: bisque;
   border: 5px solid dodgerblue;
+}
+
+ul{
+  list-style-position: inside;
+  list-style-type: none;
+  list-style-image:none;
+
 }
