--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,22 +1,8 @@
-*{
-  box-sizing: border-box;
+.list{
+  font-size: 30px;
 }
-
-body,ul{
-  padding: 0;
-  margin: 0;
-}
-
-.wrapper{
-  width: 200px;
-  height: 200px;
-  background-color: bisque;
-  border: 5px solid dodgerblue;
-}
-
-ul{
-  list-style-position: inside;
-  list-style-type: none;
-  list-style-image:none;
-
+h1{
+  font-size: 120px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
